@@ -1,5 +1,8 @@
 since 1.3
 =========
+
+- fix bug #63332: Pasting into a cell that has spilled out, pastes
+  into all overwritten cells
 - fix bug #101926: kspread never prints the grid
 - Implement save/load Oasis format
 - Allow to sort without respect case
